--- a/prodotti.html
+++ b/prodotti.html
@@ -86,14 +86,14 @@
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/01.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/01.jpg" alt="menu">
 								<h2>ACQUA CELLULARE</h2><!-- name -->
 								<h3>&euro; 25.00</h3>
 							</div><!-- /item -->
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/02.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/02.jpg" alt="menu">
 								<h2>OSMOCLEAN</h2><!-- name -->
 								<h3>&euro; 25.00</h3>
 
@@ -101,7 +101,7 @@
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/04.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/04.jpg" alt="menu">
 								<h2>LATTE DERGENTE</h2><!-- name -->
 								<h3>&euro; 21.00</h3>
 
@@ -113,14 +113,14 @@
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/01.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/01.jpg" alt="menu">
 								<h2>ACQUA CELLULARE</h2><!-- name -->
 								<h3>&euro; 25.00</h3>
 							</div><!-- /item -->
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/02.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/02.jpg" alt="menu">
 								<h2>OSMOCLEAN</h2><!-- name -->
 								<h3>&euro; 25.00</h3>
 
@@ -128,7 +128,7 @@
 
 							<!-- item -->
 							<div class="col-sm-6 col-md-4 dashed-bottom">
-								<img class="img-responsive" src="http://joshmilano.github.io/image/extra/prodotti/04.jpg" alt="menu">
+								<img class="img-responsive center-block " src="http://joshmilano.github.io/image/extra/prodotti/04.jpg" alt="menu">
 								<h2>LATTE DERGENTE</h2><!-- name -->
 								<h3>&euro; 21.00</h3>
 
