--- a/chisiamo.html
+++ b/chisiamo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class=" js no-touch csstransforms3d csstransitions video"><div class="fit-vids-style" id="fit-vids-style" style="display: none;">­<style>                 .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }                                         </style></div><script async="" src="./extra/analytics.js"></script><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Agretti Restaurant</title>
+		<title>Image - di Paola Braga</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 
