--- a/chisiamo.html
+++ b/chisiamo.html
@@ -79,45 +79,24 @@
 
 					<div class="divider"><!-- lines divider --></div>
 
-					<!-- GALLERY -->
-					<div class="row gallery">
-						<div class="col-md-12 lightbox" data-plugin-options="{&quot;delegate&quot;: &quot;a&quot;, &quot;gallery&quot;: {&quot;enabled&quot;: true}}">
-							<!-- images thumbnails: 500 x 337 px -->
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r3.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r3.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
-							</a>
-							<a href="">
-								<span><i class="fa fa-search"></i></span>
-								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
-							</a>
-						</div>
-					</div>
-					<!-- /GALLERY -->
+					
+					<div class="row">
+                    <div class="col-md-2 col-md-offset-3">
+                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive">
+                        <h3 class="text-center">John Doe</h3>
+                        <p class="text-center">Developer</p>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive">
+                        <h3 class="text-center">John Doe</h3>
+                        <p class="text-center">Developer</p>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive">
+                        <h3 class="text-center">John Doe</h3>
+                        <p class="text-center">Developer</p>
+                    </div>
+                	</div>
 
 					<div class="clearfix spacer"><!-- 60px spacer --></div>
 
@@ -125,7 +104,7 @@
 
 						<h1>
 							<!-- iPhones, Androids and other mobile devices will recognize the phone number -->
-							<a class="phonelink" href="tel:+1800-555-1234">02-9535142</a>
+							<a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
 							<small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
 						</h1>
 
