--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
-						<a class="navbar-brand" href="./extraindex.html">
+						<a class="navbar-brand" href="#">
 							<img src="./extra/logo.png" alt="" height="40"> 
 						</a>
 					</div>
@@ -61,8 +61,12 @@
 
 					</div><!-- /.navbar-collapse -->
 
+
+
 				</div>
 			</nav>
+
+
 
 		</header>
 
@@ -77,10 +81,14 @@
 			
 			
 			
-		<div class="mc-image current-slide" title="" style="position: absolute; top: 0px; left: 0px; display: block; z-index: 5; width: 1679px; height: 475px; opacity: 1; background-image: url(extra/1.jpg); background-color: rgb(0, 0, 0);" data-href="">
+		<div class="mc-image current-slide" title="" style="position: absolute; top: 0px; left: 0px; display: block; z-index: 5; width: 1679px; height: 450px; opacity: 1; background-image: url(Prova-imm-apertura.png); background-color: rgb(0, 0, 0);" data-href="">
 				
-			</div></div>
+			</div>
+
+
+		</div>
 		<!-- /FULL SLIDER -->
+
 
 
 		<!-- JAVASCRIPT FILES -->
