--- a/trattamenti.html
+++ b/trattamenti.html
@@ -74,8 +74,53 @@
 
 				<header>
 					<h1 class="uppercase text-center ">TRATTAMENTI</h1>
+						<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque. Ut enim massa, sodales tempor convallis et, iaculis ac massa.</p>
+
 				</header>
 
+					<div class="divider"><!-- lines divider --></div>
+
+					
+
+				<!-- GALLERY -->
+					<div class="row gallery">
+						<div class="col-md-12 lightbox" data-plugin-options="{&quot;delegate&quot;: &quot;a&quot;, &quot;gallery&quot;: {&quot;enabled&quot;: true}}">
+							<!-- images thumbnails: 500 x 337 px -->
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r3.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r3.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r2.jpg" width="500">
+							</a>
+							<a href="">
+								<span><i class="fa fa-search"></i></span>
+								<img class="img-responsive" alt="" src="./extra/r1.jpg" width="500">
+							</a>
+						</div>
+					</div>
+					<!-- /GALLERY -->
 				<!-- -->
 				<div class="row menu">
 
