--- a/index.html
+++ b/index.html
@@ -51,18 +51,6 @@
 			    position: relative;
 			    min-height: 100%;
 			}
-
-			.cover .cover-image {
-    z-index: -1;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-}
-
-
 		</style>
 
 	</head>
@@ -111,12 +99,22 @@
 		</section>
 
 		<div class="cover">
-            <div class="cover-image" style="background-image: url(apertura.png)"></div>
-            
+            <div class="cover-image" style="background-image: url(apertura.pngù"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1 class="text-inverse">Heading</h1>
+                        <p class="text-inverse">Lorem ipsum dolor sit amet, consectetur adipisici eli.</p>
+                        <br>
+                        <br>
+                        <a class="btn btn-lg btn-primary">Click me</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
-		<!-- FULL SLIDER 
+		<!-- FULL SLIDER -->
 		<div id="full-slider" class="mc-cycle" style="width: 1679px; height: 475px; opacity: 1;">
 			
 			
@@ -125,12 +123,13 @@
 				
 		</div>
 
+
+
+
+
 		</div>
+		<!-- /FULL SLIDER -->
 
-
-
-
--->
 
 
 		<!-- JAVASCRIPT FILES -->
