--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p class="lead text-left ">
+            <p class="lead text-center">
               <i class="text">
                 <quotecustom>“</quotecustom>
                 <br>La vera bellezza&nbsp;è l'insieme
