--- a/index2.html
+++ b/index2.html
@@ -69,8 +69,7 @@
             <p class="lead text-center">
               <i class="text">
                 <quotecustom>“</quotecustom>
-                <br>La vera bellezza&nbsp;è l'insieme
-                <br>di tre componenti
+                <br>La vera bellezza&nbsp;è l'insieme di tre componenti
                 <br>-&nbsp;fisica, estetica e psichica -
                 <br>tutte ugualmente importanti
                 <br>e che devono realizazzarsi
