--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
       <div class="cover-image" style="background-image : url('apertura2.png')"></div>
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
+          <div class="col-md-offset-0 col-md-10 text-center">
             <p class="lead text-center">
               <i class="text">
                 <quotecustom>“</quotecustom>
