--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,14 @@
 
 		<script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
 
-    
+    	<style type="text/css">
+    	  #map { 
+    	  	height: 100%; 
+			border: 1px solid red;
+
+    	  	}
+   		</style>
+
 		<script>
 
 			function initialize() {
@@ -105,8 +112,7 @@
 
 		<!-- MIDDLE -->
 		
-		
-			<div id="map" style="width: 565px;"></div>
+
 	
 		<!-- content -->
 		<section id="middle" class="container" style="min-height: 565px;">
@@ -116,6 +122,29 @@
 				<h1 class="text-center">Inscriviti alla nostra <strong><em>Newsletter!</em></strong></h1>
 				<p class="lead text-center">Riceverai ogni messe aggiornamenti sulle novit&aacute; del nostro negozio.</p>
 			</header>
+
+	        <div class="row">
+	        	<div class="col-md-12">
+
+	        		<div id="map"></div>
+	        		
+				    <script type="text/javascript">
+
+						var map;
+						function initMap() {
+						  map = new google.maps.Map(document.getElementById('map'), {
+						    center: {lat: -34.397, lng: 150.644},
+						    zoom: 8
+						  });
+						}
+
+				    </script>
+				    <script async defer
+				      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+				    </script>
+
+				</div>
+			</div>
 
 	        <div class="row">
 	          <div class="col-md-offset-3 col-md-6">
