--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
 
 				    </script>
 				    <script async defer
-				      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+				      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLr4r2IP9TXVse4AYWxGPNLyrTywBCjaE&callback=initMap">
 				    </script>
 
 				</div>
