--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 
 				    </script>
 				    <script async defer
-				      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGEZecrVXYGacOIM5gDDyourOJ5P_9gBA&callback=initMap">
+				      src="https://maps.googleapis.com/maps/api/js?key=510967541357-rraof5bej57t4j9gbsl9nkkn21oghd31.apps.googleusercontent.com&callback=initMap">
 				    </script>
 
 				</div>
