--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 	        <div class="row">
 	        	<div class="col-md-12">
 
-	        		<div id="map"></div>
+	        		<div id="map">dssd</div>
 
 				    <script type="text/javascript">
 
@@ -106,6 +106,8 @@
 						    center: {lat: -34.397, lng: 150.644},
 						    zoom: 8
 						  });
+						  console.log(map);
+
 						}
 
 				    </script>
