--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,9 @@
 
 						var map;
 						function initMap() {
+						  
+						  alert("ds");
+
 						  map = new google.maps.Map(document.getElementById('map'), {
 						    center: {lat: -34.397, lng: 150.644},
 						    zoom: 8
