--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,12 @@
 
 		<script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
 
+
+		 <style type="text/css">
+      html, body { height: 100%; margin: 0; padding: 0; }
+      #map { height: 100%; }
+    </style>
+
 	</head>
 	
 
