--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
 		 <style type="text/css">
       html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
+      #map { height: 100%;border: :1px solid red; }
     </style>
 
 	</head>
@@ -108,15 +108,11 @@
 
 						var map;
 						function initMap() {
-						  
-						  alert("ds");
 
 						  map = new google.maps.Map(document.getElementById('map'), {
 						    center: {lat: -34.397, lng: 150.644},
 						    zoom: 8
 						  });
-						  console.log(map);
-
 						}
 
 				    </script>
