--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,17 @@
 
 
 		 <style type="text/css">
-      html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%;border: :1px solid red; }
+
+
+	 #fullwidthmap {
+	width: 100% !important;
+    height: 250px;
+	}
+
+
     </style>
 
 	</head>
-	
-
-
-
 	<body>
 
 
@@ -88,7 +90,7 @@
 
 		<!-- MIDDLE -->
 		
-
+		<section id="fullwidthmap"></section>
 	
 		<!-- content -->
 		<section id="middle" class="container" style="min-height: 565px;">
@@ -99,20 +101,26 @@
 				<p class="lead text-center">Riceverai ogni messe aggiornamenti sulle novit&aacute; del nostro negozio.</p>
 			</header>
 
+			
+
 	        <div class="row">
 	        	<div class="col-md-12">
 
-	        		<div id="map">dssd</div>
 
 				    <script type="text/javascript">
 
 						var map;
 						function initMap() {
 
-						  map = new google.maps.Map(document.getElementById('map'), {
-						    center: {lat: -34.397, lng: 150.644},
-						    zoom: 8
+						  map = new google.maps.Map(document.getElementById('fullwidthmap'), {
+						    center: {lat: 45.547974, lng: 9.077840},
+						    zoom: 15
 						  });
+
+						  var marker = new google.maps.Marker({
+							  position: {lat: 45.547974, lng: 9.077840},
+							  map: map,
+  						  });
 						}
 
 				    </script>
