--- a/contact.html
+++ b/contact.html
@@ -235,9 +235,17 @@
 
 
 		<!-- JAVASCRIPT FILES -->
+
+
+		
+		<!-- JAVASCRIPT FILES -->
 		<script type="text/javascript" src="./extra/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./extra/jquery.magnific-popup.min.js"></script>
+		<script type="text/javascript" src="./extra/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="./extra/jquery.cycle.all.min.js"></script>
+		<script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
 
-
+		<script type="text/javascript" src="./extra/scripts.js"></script>
     
 
 </body>
