--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0060)http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/contact.html -->
 <html class=" js no-touch csstransforms3d csstransitions video" style=""><div class="fit-vids-style" id="fit-vids-style" style="display: none;">­<style>                 .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }                                         </style></div><script async="" src="./extra/analytics.js"></script><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link type="text/css" rel="stylesheet" href="./extra/css"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}</style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style{font-family:Roboto,Arial,sans-serif;font-size:11px;font-weight:400;text-decoration:none}.gm-style img{max-width:none}</style>
 		<meta charset="utf-8">
-		<title>Image</title>
+    <title>Image di Paola Braga - Contatti</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 
@@ -75,6 +75,9 @@
 							<li><a href="chisiamo.html" >CHI SIAMO</a></li>
 							<li><a href="trattamenti.html">TRATTAMENTI</a></li>
 							<li><a href="prodotti.html">PRODOTTI</a></li>
+							<li>
+				              <a href="solari.html">FOCUS ON</a>
+				            </li>
 							<li class="active"><a href="contact.html">CONTATTI</a></li>
 
 
