--- a/solari.html
+++ b/solari.html
@@ -1,4 +1,4 @@
-<html><head></head><body>
+<html><head>
     <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
       <style>
         .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
@@ -11,7 +11,9 @@
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Image di Paola Braga - Chi Siamo</title>
+
+    <title>Image di Paola Braga - Solari</title>
+
   <meta name="keywords" content="">
   <meta name="description" content="">
   <!-- mobile settings -->
@@ -29,14 +31,24 @@
   <link href="./extra/layout.css" rel="stylesheet" type="text/css">
   <!-- Morenizr -->
   <script type="text/javascript" src="./extra/modernizr.min.js"></script>
-  <style type="text/css"></style>
+  <style type="text/css">
+    .subtitle {
+    font-family: 'Open Sans';
+    font-size: 28px;
+    line-height: 26px;
+    padding-bottom: 10;
+    margin: 0;
+}
+  </style>
+
+  </head><body>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
       <!-- add "white" class for white nav bar -->
       <div class="container">
         <!-- Mobile Menu Button -->
         <button id="mobileMenu" class="fa fa-bars" type="button" data-toggle="collapse" data-target=".navbar-collapse"></button>
-        <!-- Brand and toggle get grouped for better mobile display -->
+        <!-- /.navbar-collapse -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
 							<img src="./extra/logo.png" alt="" height="40"> 
@@ -48,16 +60,16 @@
             <li>
               <a href="index.html">HOME</a>
             </li>
-            <li class="active">
+            <li>
               <a href="chisiamo.html">CHI SIAMO</a>
             </li>
-            <li>
+            <li >
               <a href="trattamenti.html">TRATTAMENTI</a>
             </li>
             <li>
               <a href="prodotti.html">PRODOTTI</a>
             </li>
-            <li>
+            <li class="active">
               <a href="solari.html">FOCUS ON</a>
             </li>
             <li>
@@ -65,7 +77,7 @@
             </li>
           </ul>
         </div>
-        <!-- /.navbar-collapse -->
+        <!-- Brand and toggle get grouped for better mobile display -->
       </div>
     </nav>
   </header>
@@ -74,76 +86,39 @@
     <div class="alternate">
       <div class="container">
         <header>
-          <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
-            nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.
-            Ut enim massa, sodales tempor convallis et, iaculis ac massa.</p>
+          <h1 class="uppercase text-center ">Solari</h1>
         </header>
-        <div class="divider">
-          <!-- lines divider -->
-        </div>
-        <div class="row gallery" style="padding-bottom:10px;">
-          <div class="col-md-12">
-            <div class="section">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-12">
-                    <img src="extra/chi-siamo.jpg" class="center-block img-responsive">
-                  </div>
-                </div>
+        <!-- GALLERY -->
+        <div class="p-y-lg section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <a><img src="foto_news/timthumb_instragraph.jpeg" class="img-fluid img-thumbnail"></a>
+              </div>
+              <div class="col-md-6">
+                <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
+                <p class="lead">Formule brevettate, texture ultra-sensoriali, una profumazione calda e sensoriale e preservazione del capitale di giovinezza, il tutto per garantire risultati di bellezza e protezione ottimali.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="row" style="padding-top:20px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
-          </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
+        <!-- -->
+        <div class="divider">
+          <!-- lines divider -->
         </div>
-        <div class="row" style="padding-top:10px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
-          </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
-        </div>
-        <div class="row" style="padding-top:10px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
-          </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
-        </div>\</div>
-      <div class="clearfix spacer">
-        <!-- 60px spacer -->
       </div>
-      <div class="text-center">
-        <h1>
-          <!-- iPhones, Androids and other mobile devices will recognize the phone
-          number -->
-          <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
-          <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
-        </h1>
-      </div>
+      <!-- /container -->
     </div>
   </section>
   <!-- /MIDDLE -->
-  <!-- FOOTER -->
+  <!-- /FOOTER -->
   <footer>
     <!-- SCROOL TO TOP -->
-    <a href="http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/about.html#toTop" class="fa fa-arrow-up toTop"></a>
+    <a href="#toTop" class="fa fa-arrow-up toTop"></a>
     <div class="container">
       <div class="row">
         <div class="col-md-6 copyright">Image
-          <br>2015 © All Rights Reserved.</div>
+          <br>2015 All Rights Reserved.</div>
         <div class="col-md-6 text-right">
           <a href="" class="social fa fa-facebook"></a>
           <a href="" class="social fa fa-twitter"></a>
@@ -151,7 +126,7 @@
       </div>
     </div>
   </footer>
-  <!-- /FOOTER -->
+  <!-- FOOTER -->
   <!-- JAVASCRIPT FILES -->
   <script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="./extra/bootstrap.min.js"></script>
@@ -161,7 +136,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
