--- a/trattamenti.html
+++ b/trattamenti.html
@@ -76,7 +76,7 @@
             <div class="container">
                 <header>
                     <h1 class="uppercase text-center ">TRATTAMENTI</h1>
-                    <p class="lead text-center">L'ideale di bellezza che cerchiamo è già dentro di noi.
+                    <p class="lead2 text-center">L'ideale di bellezza che cerchiamo è già dentro di noi.
                         <br>
                         <br>La bellezza è prima di tutto l’espressione di uno stato di grazia. Da
                         questa realtà nasce il mio approccio all’estetica, che ha lo scopo di riequilibrare,
