--- a/chisiamo.html
+++ b/chisiamo.html
@@ -75,7 +75,7 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
+          <p class="lead2 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
             nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.
             Ut enim massa, sodales tempor convallis et, iaculis ac massa.</p>
         </header>
