--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
 			<header>
 				<h1 class="text-center">Inscriviti alla nostra <strong><em>Newsletter!</em></strong></h1>
-				<p class="lead text-center">Riceverai ogni messe aggiornamenti sulle novit&aacute; del nostro negozio.</p>
+				<p class="lead2 text-center">Riceverai ogni messe aggiornamenti sulle novit&aacute; del nostro negozio.</p>
 			</header>
 
 			
