--- a/prodotti.html
+++ b/prodotti.html
@@ -77,7 +77,7 @@
             <div class="container">
                     <header>
                         <h1 class="text-center">PRODOTTI</h1>
-                        <p class="lead text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice bellezza.<br/><br/>
+                        <p class="lead2 text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice bellezza.<br/><br/>
 Un trattamento estetico che rimane in superficie rischia infatti di dare risultati che svaniscono in breve.<br/><br/>
 Omeoenergetica invece entra in profondità e agisce a diversi livelli, in base al principio che ogni singola parte non può essere isolata dall'altra. Solo così è possibile risolvere in modo radicale problemi frequenti come la cellulite e l'adipe localizzata, le gambe pesanti e l'ipotonia dei tessuti, l'invecchiamento del viso e quello del corpo. L'obiettivo fondamentale è di risvegliare le energie complessive nascoste nel fisico che, con il tempo o lo stress, subiscono blocchi e alterazioni. Sollecitando i punti chiave attraverso cui scorre l'energia
 vitale, vengono ridistribuite armoniosamente le cariche energetiche naturali e ricreata quella situazione di equilibrio interno che si riflette in una pelle giovane, sana e luminosa.
