--- a/solari.html
+++ b/solari.html
@@ -97,7 +97,7 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead2 text-center">Formule brevettate, texture ultra-sensoriali, una profumazione calda e sensoriale e preservazione del capitale di giovinezza, il tutto per garantire risultati di bellezza e protezione ottimali.</p>
+                <p class="lead2">Formule brevettate, texture ultra-sensoriali, una profumazione calda e sensoriale e preservazione del capitale di giovinezza, il tutto per garantire risultati di bellezza e protezione ottimali.</p>
               </div>
             </div>
           </div>
