--- a/solari.html
+++ b/solari.html
@@ -101,14 +101,13 @@
           </div>
         </div>
         <!-- -->
-        <br>
-        <div class="divider">
+        <div class="divider" style="margin-bottom: 60px;margin-top: 60px;">
           <!-- lines divider -->
         </div>
         <div class="p-y-lg section">
           <div class="container">
             <div class="row">
-               <div class="col-md-6">
+              <div class="col-md-6">
                 <a><img src="foto_news/solari2.jpg" class="img-fluid img-thumbnail"></a>
               </div>
               <div class="col-md-6">
@@ -117,7 +116,6 @@
                   sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
                   risultati di bellezza e protezione ottimali.</p>
               </div>
-             
             </div>
           </div>
         </div>
