--- a/chisiamo.html
+++ b/chisiamo.html
@@ -17,8 +17,7 @@
   <!-- mobile settings -->
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
   <!-- WEB FONTS -->
-  <link href="./extra/css" rel="stylesheet" type="text/css">
-  <!-- CORE CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">  <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
