--- a/solari.html
+++ b/solari.html
@@ -17,8 +17,7 @@
   <!-- mobile settings -->
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
   <!-- WEB FONTS -->
-  <link href="./extra/css" rel="stylesheet" type="text/css">
-  <!-- CORE CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">  <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -93,7 +92,7 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead2">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
                   sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
                   risultati di bellezza e protezione ottimali.</p>
               </div>
@@ -112,7 +111,7 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead2 text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
                   sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
                   risultati di bellezza e protezione ottimali.</p>
               </div>
