--- a/trattamenti.html
+++ b/trattamenti.html
@@ -16,7 +16,10 @@
   <!-- mobile settings -->
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
   <!-- WEB FONTS -->
-  <link href="./extra/css" rel="stylesheet" type="text/css">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+
+
   <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -74,7 +77,7 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center ">TRATTAMENTI</h1>
-          <p class="lead2 text-center">L'ideale di bellezza che cerchiamo è già dentro di noi.
+          <p class="lead text-center">L'ideale di bellezza che cerchiamo è già dentro di noi.
             <br>
             <br>La bellezza è prima di tutto l’espressione di uno stato di grazia. Da
             questa realtà nasce il mio approccio all’estetica, che ha lo scopo di riequilibrare,
