--- a/prodotti.html
+++ b/prodotti.html
@@ -17,8 +17,7 @@
     <!-- mobile settings -->
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
     <!-- WEB FONTS -->
-    <link href="./extra/css" rel="stylesheet" type="text/css">
-    <!-- CORE CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">    <!-- CORE CSS -->
     <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -75,7 +74,7 @@
             <div class="container">
                 <header>
                     <h1 class="text-center">PRODOTTI</h1>
-                    <p class="lead2 text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice
+                    <p class="lead text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice
                         bellezza.
                         <br>
                         <br>Un trattamento estetico che rimane in superficie rischia infatti di dare
