--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,9 @@
                                 
                                 						  map = new google.maps.Map(document.getElementById('fullwidthmap'), {
                                 						    center: {lat: 45.547974, lng: 9.077840},
-                                						    zoom: 15
-                                						  });
+                                						    zoom: 15,
+                                                scrollwheel : false
+                                 						  });
                                 
                                 						  var marker = new google.maps.Marker({
                                 							  position: {lat: 45.547974, lng: 9.077840},
