--- a/solari.html
+++ b/solari.html
@@ -92,7 +92,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <a><img src="foto_news/timthumb_instragraph.jpeg" class="img-fluid img-thumbnail"></a>
+                <a><img src="foto_news/imm-laser.jpg" class="img-fluid img-thumbnail"></a>
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">LASER</h3>
